# saiunit

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  SECURITY.md  build_clean.sh  build_wheel.sh  changelog.md  conftest.py  make_brainunit_code.py  make_brainunit_setup.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI-daily.yml  CI.yml  Publish.yml  deploy-docs.yml
brainunit/: README.md  __init__.py  _base.py  _base_test.py  _celsius_test.py  _matplotlib_compat_test.py  _sparse_base.py  _unit_common.py  _unit_constants.py  constants.py  constants_test.py  make_brainunit_code.py  make_brainunit_doc.py  pyfile.template  pyproject.toml.template  setup.py.template
brainunit/autograd/: _hessian.py  _hessian_test.py  _jacobian.py  _jacobian_test.py  _value_and_grad.py  _value_and_grad_test.py  _vector_grad.py  _vector_grad_test.py
brainunit/brainunit/: __init__.py  _backend.py  _base.py  _base_decorators.py  _base_dimension.py  _base_getters.py  _base_quantity.py  _base_unit.py  _celsius.py  _exceptions.py  _misc.py  _unit_common.py  _unit_constants.py  _unit_shortcuts.py  constants.py  custom_array.py  typing.py
brainunit/docs/: auto_generater.py  conf.py  requirements.txt
brainunit/fft/: _fft_change_unit.py  _fft_keep_unit_test.py
brainunit/linalg/: _linalg_change_unit.py  _linalg_change_unit_test.py  _linalg_keep_unit.py  _linalg_keep_unit_test.py  _linalg_remove_unit.py
brainunit/math/: __init__.py  _alias.py  _einops.py  _einops_parsing_test.py  _einops_test.py  _fun_accept_unitless.py  _fun_array_creation.py  _fun_change_unit.py  _fun_keep_unit.py  (+5 more)
dev/: backend_support_data.json  backend_support_render.py  backend_support_sweep.py  units-generator.py  units.py  units_template.py
docs/: FAQs.md  FAQs.rst  Makefile  api.rst  auto_generater.py  conf.py  index.rst  make_brainunit_doc.py  requirements.txt
examples/: matplotlib_plain_basics.py  matplotlib_quantity_basics.py  matplotlib_quantity_interactive.py  matplotlib_quantity_vs_plain.py  quantity_matplotlib_interactive.py
saiunit/: __init__.py  _backend.py  _backend_parametrize_test.py  _backend_test.py  _base.py  _base_decorators.py  _base_decorators_test.py  _base_dimension.py  _base_dimension_test.py  _base_getters.py  _base_getters_test.py  _base_quantity.py  _base_quantity_edge_test.py  _base_quantity_format_test.py  _base_quantity_test.py  _base_test.py  _base_unit.py  _base_unit_test.py  _celsius.py  _celsius_test.py  _compatible_import.py  _compatible_import_test.py  _dask_laziness_test.py  _display_test.py  _exceptions.py  _exceptions_test.py  _jax_compat.py  _jax_compat_test.py  _jax_guard.py  _jax_guard_test.py  _matplotlib_compat.py  _matplotlib_compat_test.py  _misc.py  _misc_test.py  _ndonnx_test.py  _no_jax_test.py  _scatter.py  _scatter_test.py  _sparse_base.py  _sparse_base_test.py  (+14 more)
(+192 files in other folders)
