[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = { attr = "saiunit._version.__version__" }

[tool.setuptools.packages.find]
exclude = [
    "docs*",
    "build*",
    "dist*",
    "dev*",
    "brainunit*",
    "saiunit.egg-info*",
    "saiunit/__pycache__*",
    "saiunit/__init__.py"
]

[tool.setuptools.package-data]
saiunit = ["py.typed"]


[project]
name = "saiunit"
description = "Enabling Unit-aware Computations for AI-driven Scientific Computing."
readme = 'README.md'
license = 'Apache-2.0'
requires-python = '>=3.10'
authors = [{ name = 'SAIUnit Developers', email = 'chao.brain@qq.com' }]
classifiers = [
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]

keywords = ['physical unit', 'physical quantity', 'scientific computing', 'AI for science', ]

dependencies = [
    'numpy',
    'typing_extensions',
    'array_api_compat>=1.9',
    'opt_einsum',
]

dynamic = ['version']


[tool.flit.module]
name = "saiunit"


[project.urls]
homepage = 'https://github.com/chaobrain/saiunit'
repository = 'https://github.com/chaobrain/saiunit'
"Bug Tracker" = "https://github.com/chaobrain/saiunit/issues"
"Documentation" = "https://saiunit.readthedocs.io/"


[project.optional-dependencies]
testing = ['pytest', 'brainstate']
jax = ["jax"]
cpu = ["jax[cpu]"]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]
tpu = ["jax[tpu]"]
cupy = ["cupy-cuda12x>=13.0"]
torch = ["torch>=2.0"]
dask = ["dask[array]>=2024.1"]
ndonnx = ["ndonnx>=0.9"]
all = ["saiunit[jax,cupy,torch,dask,ndonnx]"]


[tool.mypy]
# Optional third-party deps that may or may not be installed in a given
# environment. Silence import errors so type_check can run with only the
# core requirements (numpy + jax) installed.
[[tool.mypy.overrides]]
module = [
    "brainstate",
    "brainstate.*",
    "cupy",
    "cupy.*",
    "torch",
    "torch.*",
    "dask",
    "dask.*",
    "ndonnx",
    "ndonnx.*",
    "scipy",
    "scipy.*",
    "matplotlib",
    "matplotlib.*",
    "opt_einsum",
    "opt_einsum.*",
    "equinox",
    "equinox.*",
    "jax.util",
]
ignore_missing_imports = true
